Fixed image alignment

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,10 +25,7 @@ img {
   margin-top: 40px;
   margin-bottom: 40px;
   display: block;
-  float: none;
-  // margin-left: auto;
-  // margin-right: auto;
-  width: auto;  
-  height: auto;
-  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
 }
